objects/Buyer_Hierarchy__c.object
<CustomObject>
    <description>Contains the hierarchical position and HCSC sentiment of the buyers (contacts associated to an account)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account associated with the Buyer Heirarchy</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Buyer Hierarchies</relationshipLabel>
        <relationshipName>Buyer_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Buyer Heirarchy Active?</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Id__c</fullName>
        <description>Contact Role Id of the Contact</description>
        <label>Contact Role Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>Role of the Contact associated with the Buyer Heirarchy</description>
        <label>Contact Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact associated with the Buyer Heirarchy</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Buyer Hierarchies</relationshipLabel>
        <relationshipName>Buyer_Hierarchies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity associated with the Buyer Heirarchy</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Buyer Hierarchies</relationshipLabel>
        <relationshipName>Buyer_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role of the Buyer Heirarchy</description>
        <label>Buyer Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Blocker</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Buyer Hierarchy</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Buyer Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyer Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>